--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -557,6 +557,8 @@ Error message and password prompt
 
 <li>vocabulaire désuet</li>
 
+<li>voisins</li>
+
 <li>Week</li>
 
 <li>youtube</li>
@@ -9635,7 +9637,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20190108101211875" modified="20210415091847885" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20211019132005197" list="Home pw" modified="20211019132005197" title="$:/StoryList">
+<div created="20211215160132664" list="[[code snippets]] Home" modified="20211215160132664" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9686,11 +9688,11 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1216&quot;
+            &quot;text&quot;: &quot;1536&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;684&quot;
+            &quot;text&quot;: &quot;864&quot;
         }
     }
 }</pre>
@@ -9701,8 +9703,8 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20210313142548541" modified="20210715143200077" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20211015093826717" title="$:/temp/search">
-<pre>kid</pre>
+<div created="20190114084246125" modified="20211215160130136" title="$:/temp/search">
+<pre>sni</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10620,7 +10622,7 @@ sentiment = émotion x temps
 
 bonheur = joie x temps</pre>
 </div>
-<div created="20190725145732868" modified="20190725145946327" tags="dev" title="code snippets">
+<div created="20190725145732868" modified="20211215160229194" tags="dev" title="code snippets">
 <pre>! Java stream regroupement d'objets en Map&lt;A, B&gt; à partir d'une liste d'objets
 
 ```
@@ -10629,6 +10631,13 @@ bonheur = joie x temps</pre>
                         AlertTriggeredEntity::getAlertTriggeredId, 
                         Collectors.mapping(AlertTriggeredEntity::getTransactionId, Collectors.toSet())
                 ));
+
+```
+
+Jenkins/k8s wait for deployment
+
+```
+kubectl rollout status deployment deployment_name --watch --timeout=5m
 
 ```
 </pre>
@@ -12066,11 +12075,12 @@ http://www.celestialheavens.com/viewpage.php?id=24
 * Individual Computer Players won't hire heroes is they already have six or more.
 * Computer Players as a whole will not hire Heroes if they have 20 or more among them. </pre>
 </div>
-<div created="20190108105358377" modified="20210730091509365" tags="core" title="Home">
+<div created="20190108105358377" modified="20211207141721802" tags="core" title="Home">
 <pre>* ''dez Tugan 7 mai 2020'' https://mail.yahoo.com/d/search/keyword=Tugan/messages/17172
-* ''CE carte cadeau''
-* ''DIF''
+* ''DIF'' / CPF / 
 * [[Tugan TODO]]
+* One Piece https://www.glenatmangamax.com/manga/one-piece-edition-originale/
+* ''Python gamification'' https://py-rates.fr/ https://py.checkio.org/
 * ''&gt;&gt;&gt;'' [[pointeur current TODO]]
 * ''&gt;&gt;&gt;'' [[todo DL]]
 * [[dev responsable &amp; job hunt]]
@@ -12081,10 +12091,13 @@ http://www.celestialheavens.com/viewpage.php?id=24
 * ''Advanced Personal Development http://actualized.org/''
 * Mental Models ''https://fs.blog/mental-models/#what_are_mental_models''
 
+! achats
+* ''Heroquest Nouvelle Édition'' / Advanced Quest https://www.okkazeo.com/jeux/view/30557
+* ''Heroquest'' https://www.okkazeo.com/jeux/view/389/Heroquest
+* ''MUTANT YEAR ZERO'' https://www.letempledujeu.fr/zoom73918.html https://www.letempledujeu.fr/zoom73920.html https://www.letempledujeu.fr/zoom73917.html
+* FOUR à DONNER https://donnons.org/don/6399232
+
 ! playlists
-* WoD: Blood Roll https://ytb.trom.tf/channel/UCvYIAuvSy-X5x49mHqJl5fw/playlists
-* WoD : Vampire la Mascarade https://ytb.trom.tf/playlist?list=PL9f7OVgArhlZD8l1cidFcsofe_EW8E6kq
-* WoD: Loup-Garou https://ytb.trom.tf/playlist?list=PL9f7OVgArhlZUqMUeGo3pd3FvLTmRPMBz
 * campagnes Zonakron	https://www.youtube.com/user/Ekmule/videos / https://www.youtube.com/user/Ekmule/playlists
 
 ! Daily
@@ -12094,8 +12107,9 @@ http://www.celestialheavens.com/viewpage.php?id=24
 
 ! Weekly
 * https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net 7/19
+* https://www.dannygoldsmithmagic.com/blog
 * https://facebook.com/messages l.d@y7+17
-* https://monespace.ausy.fr sa.le@au.f7+20
+* https://monespace.ausy.fr sa.le@au.f1121long
 * Ecole Directe https://www.ecoledirecte.com =&gt; sjlemoine 9/19
 * https://ogmagraf.blogspot.com/
 
@@ -12157,7 +12171,7 @@ http://www.celestialheavens.com/viewpage.php?id=24
 
 ! Ausy &amp; ticketresto
 * https://webmail.ausy.fr sa.le@a.f1+20
-* https://monespace.ausy.fr sa.le@au.f7+20
+* https://monespace.ausy.fr sa.le@au.f1121long
 * https://intra.ausy.fr
 * https://www.ausyce.fr/index.php
 * https://myedenred.fr/
@@ -14680,7 +14694,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20211015094059809" tags="" title="Perçou kid talk Perceval">
+<div created="20201201132516726" modified="20211106182223740" tags="" title="Perçou kid talk Perceval">
 <pre>* 	a kapoté &gt;&gt;	le grain de beauté
 * 	a kakopel &gt;&gt;	le tractopelle
 * 	akatola &gt;&gt;	chocolat
@@ -14715,7 +14729,8 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * 	gaum	&gt;&gt;	Guillaume
 * 	&quot;Papa, est-ce que t'as les grands bras pour attraper la Lune ?&quot;
 * 	&quot;moi ze vais tricher&quot;
-* 	&quot;elles z'ontaient&quot;</pre>
+* 	&quot;elles z'ontaient&quot;
+* 	&quot;z&quot;ai pas besoin z'ai fait hier !&quot; (quand on lui demande d'aller faire pipi)</pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
 <pre>https://www.youtube.com/watch?v=jC3BsBPqDRA
@@ -14889,7 +14904,7 @@ http://liens.howtommy.net/?Be1gEQ
 * Tout en respirant par le ventre, parlez sur un ton plus grave que d’habitude pour dire vos répliques. Les femmes devront s’exercer plus que les hommes, car en général leur voix est plus aiguë et ne porte pas loin. Donc, respiration « basse » et voix grave : vous projetterez votre voix au maximum.
 Faites de tels exercices régulièrement durant vos répétitions. Vous verrez : la différence sera remarquable! On vous entendra de loin… et sans micro.</pre>
 </div>
-<div created="20190130144059269" modified="20211019132052253" tags="core" title="pw">
+<div created="20190130144059269" modified="20211124143631811" tags="core" title="pw">
 <pre>pw passw
 
 cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -14903,7 +14918,7 @@ ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
 ouicse.com =&gt; sa.le@ausy.fr 121
 AUSY mail.google.com sa.le@ausy.fr ausy4/21
 intra.ausy.fr =&gt; 11/17 || 1/20 || 3/21 double
-webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 7/20
+webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 1121long
 cseausy.fr sa.le@ausyfr C521 double
 leno.1fr1.nt =&gt; A...n 2/20
 FREEBOX =&gt; 1/20
@@ -14996,8 +15011,8 @@ dasan.co	osef@grr.la osefosef 221
 airbnb.s.le@xn818
 maxi-debrid.com &gt; osef@grr.la 221
 nantesmetropole.s.le@xn321
-PE esle0090 221
-PE Agate a921 long
+PE esle0090 1021
+PE Agate a1021 long
 https://steve-s-school-76e5.thinkific.com/enrollments stevefaulkner.os.os@xn421
 petitbambou.com	osef@grr.la 421
 ranmagic.top =&gt; osef@grr.la 5/21
@@ -17321,6 +17336,11 @@ Ce pays est fucked up.</pre>
 * nodocéphale =&gt; tête de noeud
 * coprolithe =&gt; merde fossilisée
 * alburostre
+</pre>
+</div>
+<div created="20211109092746572" modified="20211109092848246" tags="" title="voisins">
+<pre>* Huguette &amp; Paul (#5? ou #3bis ?)
+* Pierre-Louis &amp; Marie-Pierre (#5? ou #7 ?)
 </pre>
 </div>
 <div created="20190108085325311" modified="20201201130221460" tags="todo ref" title="Week">
