--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9637,7 +9637,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20190108101211875" modified="20210415091847885" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20211215160132664" list="[[code snippets]] Home" modified="20211215160132664" title="$:/StoryList">
+<div created="20220110121053014" list="[[code snippets]] Home" modified="20220110121053014" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9688,11 +9688,11 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1536&quot;
+            &quot;text&quot;: &quot;1696&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;864&quot;
+            &quot;text&quot;: &quot;954&quot;
         }
     }
 }</pre>
@@ -9703,7 +9703,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20210313142548541" modified="20210715143200077" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20211215160130136" title="$:/temp/search">
+<div created="20190114084246125" modified="20220110121050718" title="$:/temp/search">
 <pre>sni</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
@@ -10622,7 +10622,7 @@ sentiment = émotion x temps
 
 bonheur = joie x temps</pre>
 </div>
-<div created="20190725145732868" modified="20211215160229194" tags="dev" title="code snippets">
+<div created="20190725145732868" modified="20220110121245289" tags="dev" title="code snippets">
 <pre>! Java stream regroupement d'objets en Map&lt;A, B&gt; à partir d'une liste d'objets
 
 ```
@@ -10640,6 +10640,13 @@ Jenkins/k8s wait for deployment
 kubectl rollout status deployment deployment_name --watch --timeout=5m
 
 ```
+
+git show url of remote
+
+```
+git config --get remote.origin.url
+```
+
 </pre>
 </div>
 <div created="20200210125319611" modified="20201201105020348" tags="exercices fiche_lecture" title="cohérence cardiaque +10 QI /5mn (Corda)">
@@ -11453,7 +11460,7 @@ https://github.com/remouk
 ```
 </pre>
 </div>
-<div created="20190108133939395" modified="20190725142207308" tags="dev" title="dev resources">
+<div created="20190108133939395" modified="20211216173343580" tags="dev" title="dev resources">
 <pre>! Java
 * https://www.rtsoft.com/pages/dink.php
 * https://www.lwjgl.org/
@@ -11490,7 +11497,10 @@ https://github.com/remouk
 SELECT * FROM v$version;
 
 ! PHP
-* https://eilgin.github.io/php-the-right-way/</pre>
+* https://eilgin.github.io/php-the-right-way/
+
+! Python
+* https://github.com/indygreg/python-build-standalone/</pre>
 </div>
 <div created="20200204131908423" modified="20201202100723007" tags="todo dev eco lifeplan" title="dev responsable &amp; job hunt">
 <pre>! dev responsable
