--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10036,7 +10036,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20220414090708653" list="Home pw" modified="20220414090708653" title="$:/StoryList">
+<div created="20220421191356714" list="Home" modified="20220421191356714" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10090,11 +10090,11 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1696&quot;
+            &quot;text&quot;: &quot;1216&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;954&quot;
+            &quot;text&quot;: &quot;684&quot;
         }
     }
 }</pre>
@@ -10105,8 +10105,8 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20210313142548541" modified="20210715143200077" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20220413103859537" title="$:/temp/search">
-<pre>magic22</pre>
+<div created="20190114084246125" modified="20220421191353354" title="$:/temp/search">
+<pre>dev</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -12072,7 +12072,7 @@ https://github.com/remouk
 ```
 </pre>
 </div>
-<div created="20190108133939395" modified="20220408154643056" tags="resources dev" title="dev resources">
+<div created="20190108133939395" modified="20220421191421671" tags="resources dev" title="dev resources">
 <pre>! Sourcehut forge
 * https://sourcehut.org/
 * https://sr.ht/~sircmpwn/sourcehut/
@@ -12128,6 +12128,9 @@ SELECT * FROM v$version;
 
 ! Python
 * https://github.com/indygreg/python-build-standalone/
+
+! linux notepad++ clone
+https://github.com/dail8859/NotepadNext
 </pre>
 </div>
 <div created="20200204131908423" modified="20201202100723007" tags="todo dev eco lifeplan" title="dev responsable &amp; job hunt">
