--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10036,7 +10036,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20220421191356714" list="Home" modified="20220421191356714" title="$:/StoryList">
+<div created="20220427152745603" list="pw Home" modified="20220427152745603" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10058,7 +10058,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10078,7 +10078,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10090,11 +10090,11 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1216&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;684&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -12748,7 +12748,7 @@ http://www.celestialheavens.com/viewpage.php?id=24
 * Individual Computer Players won't hire heroes is they already have six or more.
 * Computer Players as a whole will not hire Heroes if they have 20 or more among them. </pre>
 </div>
-<div created="20190108105358377" modified="20220414090658941" tags="core" title="Home">
+<div created="20190108105358377" modified="20220427152743753" tags="core" title="Home">
 <pre>* [[pw]]
 * ''dez Tugan 7 mai 2020'' https://mail.yahoo.com/d/search/keyword=Tugan/messages/17172
 * ''DIF'' / CPF / 
@@ -12761,7 +12761,7 @@ http://www.celestialheavens.com/viewpage.php?id=24
 * ''https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net'' 7/19
 * https://mail.yahoo.com l.d@y 6+20
 * https://facebook.com/messages l.d@y7+17
-* https://monespace.ausy.fr sa.le@au.f322doublé
+* https://monespace.ausy.fr sa.le@au.f322 (mois doublé)
 * https://www.facebook.com/troisieme.type
 * presti daortiz ideas ''https://www.facebook.com/hashtag/ideanotebook?__gid__=283203773743670''
 * presti blog: the mind oracle	https://themindoracle.blogspot.com/
@@ -12858,7 +12858,7 @@ http://www.celestialheavens.com/viewpage.php?id=24
 
 ! Ausy &amp; ticketresto
 * https://webmail.ausy.fr sa.le@a.f1+20
-* https://monespace.ausy.fr sa.le@au.f322doublé
+* https://monespace.ausy.fr sa.le@au.f322 (mois doublé)
 * https://intra.ausy.fr
 * https://www.ausyce.fr/index.php
 * https://myedenred.fr/
@@ -15611,10 +15611,21 @@ http://liens.howtommy.net/?Be1gEQ
 * Tout en respirant par le ventre, parlez sur un ton plus grave que d’habitude pour dire vos répliques. Les femmes devront s’exercer plus que les hommes, car en général leur voix est plus aiguë et ne porte pas loin. Donc, respiration « basse » et voix grave : vous projetterez votre voix au maximum.
 Faites de tels exercices régulièrement durant vos répétitions. Vous verrez : la différence sera remarquable! On vous entendra de loin… et sans micro.</pre>
 </div>
-<div created="20190130144059269" modified="20220414090737588" tags="core" title="pw">
+<div created="20190130144059269" modified="20220427152851400" tags="core" title="pw">
 <pre>pw passw
 
 cnpnet.cnp.fr =&gt;  CnpNet521t 
+
+
+```
+bitlocker	maisonfixe
+s****l_l*****e@ext.connect-tech.sncf	s422
+adm_sl*****e	a422
+vpn	s****l_l*****e
+office365	s****l_l*****e@ext.connect-tech.sncf
+wsl/ubuntu	slem u422
+instancemanager	admin/password
+```
 
 
 ```
@@ -15625,7 +15636,7 @@ ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
 ouicse.com =&gt; sa.le@ausy.fr 121
 AUSY mail.google.com sa.le@ausy.fr ausy4/21
 intra.ausy.fr =&gt; 11/17 || 1/20 || 3/21 double
-webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 322doublé
+webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 322 (mois doublé)
 cseausy.fr sa.le@ausyfr C521 double
 leno.1fr1.nt =&gt; A...n 2/20
 FREEBOX =&gt; 1/20
