--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -245,6 +245,8 @@ Error message and password prompt
 
 <li>3 Techniques Pour Se Connecter Avec N'importe Qui</li>
 
+<li>4 phrases pour insister sans crisper</li>
+
 <li>8 formes d'intelligence</li>
 
 <li>Aberkane vs zététique</li>
@@ -278,6 +280,8 @@ Error message and password prompt
 <li>Bruce Lee talk by his daughter</li>
 
 <li>Buddha lessons</li>
+
+<li>cadeaux</li>
 
 <li>card magic</li>
 
@@ -10036,7 +10040,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20220427152745603" list="pw Home" modified="20220427152745603" title="$:/StoryList">
+<div list="[[4 phrases pour insister sans crisper]] Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10105,8 +10109,8 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20210313142548541" modified="20210715143200077" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20220421191353354" title="$:/temp/search">
-<pre>dev</pre>
+<div created="20190114084246125" modified="20220428145420649" title="$:/temp/search">
+<pre>cadeau</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10249,6 +10253,14 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 * complimenter sur un domaine où la personne fait des efforts
 * comportement sur mesure
 * trouver les dénominateurs communs</pre>
+</div>
+<div created="20220428153111125" modified="20220428153536879" tags="fiche_lecture" title="4 phrases pour insister sans crisper">
+<pre>http://www.youtube.com/watch?v=McogOQLSTNE
+
+* je me permets d'insister car [...]
+* aurais-tu la gentillesse/amabilité de [...]
+* je comprends ton point de vue, à ta place je penserais pareil [puis récapituler les point de vue / de blocage de l'INTERLOCUTEUR, puis reformuler ma demande]
+* (compromis) je suis prêt à faire [...] pour [...] </pre>
 </div>
 <div created="20190627091954693" modified="20190627092024097" tags="fiche_lecture" title="8 formes d'intelligence">
 <pre>! Howard Gardner
@@ -10905,6 +10917,11 @@ He was the embodied example of living fully.  He said, “I am means.  There are
 * accept situations you cannot change
 * compassion
 * live in present : je n'ai pas besoin de FAIRE pour ETRE, mais quand je SUIS je FAIS</pre>
+</div>
+<div created="20220428145354217" modified="20220428145452970" tags="" title="cadeaux">
+<pre>* machine à gauffre + croques monsieurs
+* cloche à micro-ondes
+* </pre>
 </div>
 <div created="20190329085105976" modified="20201201104550559" tags="magic" title="card magic">
 <pre>* ''Spread Cull''
@@ -15399,45 +15416,47 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20220201200550760" tags="" title="Perçou kid talk Perceval">
-<pre>* 	a kapoté &gt;&gt;	le grain de beauté
-* 	a kakopel &gt;&gt;	le tractopelle
-* 	akatola &gt;&gt;	chocolat
-* 	kakola	&gt;&gt;	chocolat
-* 	a pantine &gt;&gt; la clémentine
-* 	aï	&gt;&gt;	sauce tamari
-* 	baboum	&gt;&gt;	badaboum
-* 	a poto	&gt;&gt;	la moto
-* 	a pachine	&gt;&gt;	la machine (à laver)
-* 	a pature	&gt;&gt;	la voiture
-* 	pomate	&gt;&gt;	tomate
-* 	paplé	&gt;&gt;	s'il te plait
-* 	assi	&gt;&gt;	merci
-* 	akafrice	&gt;&gt;	feu d'artifice
-* 	cocococoïle	&gt;&gt;	crocodile
-* 	akaboul	&gt;&gt;	le coup de boule
-* 	b'val	&gt;&gt;	Perceval
-* 	amma	&gt;&gt;	Emma
-* 	batogan / abagan	&gt;&gt;	tobogan
-* 	tymama / tynama	&gt;&gt;	pyjama (&quot;alève a tymama&quot;)
-* 	a cahion ateur	&gt;&gt;	camion-aspirateur
-* 	akor a tchipitch	&gt;&gt;	encore un litchi
-* 	a to titure	&gt;&gt;	la confiture
-* 	katado à moi	&gt;&gt;	le sac-à-dos à moi
-* 	(ti)ticovèr	&gt;&gt;	haricot-verts
-* 	une échonge	&gt;&gt;	une éponge
-* 	les papa-roulettes	&gt;&gt;	les patins à roulettes
-* 	les pata-glaces	&gt;&gt;	les patins à glace
-* 	moi chuis machelaqueen	&gt;&gt;	je suis Flash McQueen (Cars)
-* 	krateur, kratopelle	&gt;&gt;	tracteur, tractopelle
-* 	une kwature	&gt;&gt;	une couverture
-* 	gaum	&gt;&gt;	Guillaume
-* 	&quot;Papa, est-ce que t'as les grands bras pour attraper la Lune ?&quot;
-* 	&quot;moi ze vais tricher&quot;
-* 	&quot;elles z'ontaient&quot;
-* 	&quot;z&quot;ai pas besoin z'ai fait hier !&quot; (quand on lui demande d'aller faire pipi)
-* 	z'ai sauté dans mon liiiiiiiit ! c'est trop supide.
-* 	tu as pas besoin de faire caca, ze fait déjà </pre>
+<div created="20201201132516726" modified="20220428144334912" tags="" title="Perçou kid talk Perceval">
+<pre>* a kapoté &gt;&gt;	le grain de beauté
+* a kakopel &gt;&gt;	le tractopelle
+* akatola &gt;&gt;	chocolat
+* kakola	&gt;&gt;	chocolat
+* a pantine &gt;&gt; la clémentine
+* aï	&gt;&gt;	sauce tamari
+* baboum	&gt;&gt;	badaboum
+* a poto	&gt;&gt;	la moto
+* a pachine	&gt;&gt;	la machine (à laver)
+* a pature	&gt;&gt;	la voiture
+* pomate	&gt;&gt;	tomate
+* paplé	&gt;&gt;	s'il te plait
+* assi	&gt;&gt;	merci
+* akafrice	&gt;&gt;	feu d'artifice
+* cocococoïle	&gt;&gt;	crocodile
+* akaboul	&gt;&gt;	le coup de boule
+* b'val	&gt;&gt;	Perceval
+* amma	&gt;&gt;	Emma
+* batogan / abagan	&gt;&gt;	tobogan
+* tymama / tynama	&gt;&gt;	pyjama (&quot;alève a tymama&quot;)
+* a cahion ateur	&gt;&gt;	camion-aspirateur
+* akor a tchipitch	&gt;&gt;	encore un litchi
+* a to titure	&gt;&gt;	la confiture
+* katado à moi	&gt;&gt;	le sac-à-dos à moi
+* (ti)ticovèr	&gt;&gt;	haricot-verts
+* une échonge	&gt;&gt;	une éponge
+* les papa-roulettes	&gt;&gt;	les patins à roulettes
+* les pata-glaces	&gt;&gt;	les patins à glace
+* moi chuis machelaqueen	&gt;&gt;	je suis Flash McQueen (Cars)
+* krateur, kratopelle	&gt;&gt;	tracteur, tractopelle
+* une kwature	&gt;&gt;	une couverture
+* gaum	&gt;&gt;	Guillaume
+* &quot;Papa, est-ce que t'as les grands bras pour attraper la Lune ?&quot;
+* &quot;moi ze vais tricher&quot;
+* &quot;elles z'ontaient&quot;
+* &quot;z&quot;ai pas besoin z'ai fait hier !&quot; (quand on lui demande d'aller faire pipi)
+* z'ai sauté dans mon liiiiiiiit ! c'est trop supide.
+* tu as pas besoin de faire caca, ze fait déjà 
+* la dernière fois z'ai faillu chanter cette chanson
+</pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
 <pre>https://www.youtube.com/watch?v=jC3BsBPqDRA
